# moyamoya

./: .gitignore  Dockerfile  README.md  app.py  calendar_ui.py  pyproject.toml
migrations/versions/: 783d59a6f67d_add_entry_date_to_entry.py  da0ab9996028_add_updated_at_to_entry.py
static/css/: styles.css
templates/: base.html  calendar_ui.html  day_view.html  edit_entry.html  entries.html  entry_view.html  index.html  login.html  new_entry.html  register.html  search.html
